fireflyiii-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fireflyiii
  labels:
    app: fireflyiii
    part-of: fireflyiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fireflyiii
      part-of: fireflyiii
  template:
    metadata:
      labels:
        app: fireflyiii
        part-of: fireflyiii
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd   
      serviceAccountName: fireflyiii
      containers:
      - name: fireflyiii
        image: fireflyiii/core:version-5.6.10
        ports:
        - name: fireflyiii
          containerPort: 8080
        volumeMounts:
        - name: upload
          mountPath: /var/www/html/storage/upload
        - name: fireflyiii-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 150Mi
      volumes:
      - name: upload
        persistentVolumeClaim:
          claimName: upload
      - name: fireflyiii-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "fireflyiii"
