mariadb-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mariadb
  labels:
    app: mariadb
    part-of: fireflyiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      part-of: fireflyiii
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        part-of: fireflyiii
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
      serviceAccountName: fireflyiii
      containers:
      - name: mariadb
        image: ghcr.io/linuxserver/mariadb:10.5.13
        ports:
        - name: mariadb
          containerPort: 3306
        volumeMounts:
        - name: fireflyiii-mariadb
          mountPath: /config
        - name: fireflyiii-secrets
          mountPath: "/mnt/vault"
          readOnly: true
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
      volumes:
      - name: fireflyiii-mariadb
        persistentVolumeClaim:
          claimName: fireflyiii-mariadb
      - name: fireflyiii-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "fireflyiii"
